# JupyterVox

./: README.md
jupytervox/: interface.py  pyproject.toml
jupytervox/commons/ai_backend/: gemini_interface.py
jupytervox/jupytervox/: __init__.py
jupytervox/jupytervox/commons/: __init__.py  config.py  logging.py
jupytervox/jupytervox/commons/ai_backend/: gemini_interface.py  llama_cpp_interface.py
jupytervox/jupytervox/interface/: __init__.py  interface.py  jvox_interface.py
jupytervox/jupytervox/parser/: __init__.py
jupytervox/jupytervox/parser/converter/: antlr2pyast.py  antlr2pyast_listener.py  atom_name_terminals.py  basic_rules.py  classdef.py  comprehensions.py  expr.py  flow_stmts.py  funcdef.py  loop_stmts.py  test_stmts.py  tools.py
jupytervox/jupytervox/parser/debug_support/: code_snippet_check.py  single_line_check.py  utils.py
jupytervox/jupytervox/parser/debug_support/runtime_error_support/: attribute_error_support.py  entry_point.py  name_error_support.py  (+1 more)
jupytervox/jupytervox/parser/statement_chunking/: check_chunk.py  statement_chunking.py
jupytervox/jupytervox/parser/token_navigation/: lexeme_navigation.py  token_navigation.py
jupytervox/jupytervox/screenreader/: __init__.py  screenreader.py  speech_generator.py
jupytervox/parser/converter/: tools.py
jupytervox/parser/debug_support/: code_snippet_check.py
jupytervox/parser/debug_support/runtime_error_support/: attribute_error_support.py  name_error_support.py
jupytervox/screenreader/: screenreader.py  utils.py
jupytervox/screenreader/mixins/: _unit_types.py
(+109 files in other folders)
